# CrossPlatform_Programming_Course

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.cc
lab2/: CMakeLists.txt  ConsoleView.cc  ConsoleView.h  Controller.cc  Controller.h  GUIView.cpp  GUIView.h  Model.cc  Model.h  View.h  main.cc
lab3/: __init__.py
lab3/lib/: Makefile  mylib.cc  mylib.i
lab4/: CMakeLists.txt  main.cc  test.h  virtualmachine.h
